--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <h2>What We Do</h2>
         </section>
         <section>
+            <h2>What You Do</h2>
+        </section>
+        <section>
             <h2>Meet The Trainers</h2>
         </section>
         <section>
@@ -22,6 +25,6 @@
         </section>
         <footer>
             <h2>❤️ Made with love by Run Buddy</h2>
-        </footer>>
+        </footer>
     </body>
 </html>
