--- a/index.html
+++ b/index.html
@@ -131,22 +131,20 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3233.9318728644485!2d-86.89026988546583!3d35.85067402826928!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8863803dcce4108d%3A0xe7f53b88c837f435!2s1400%20Vintage%20Cir%2C%20Franklin%2C%20TN%2037064!5e0!3m2!1sen!2sus!4v1644424675378!5m2!1sen!2sus" 
                 width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
                 </iframe>
-            </div>
-            
-            <div>
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
+
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>Any questions or concerns before signing up?
                     <br />
-                    Let us know and we'll be happy to talk to you!
-                </p>
-                <adress>
-                    55 Main Street <br/>
-                    Some Town, Ca <br/>
-                    12345<br/>
-                    P: 555.RUN.BUDZ (555.786.2839) <br/>
-                    E:<a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                </adress>
+                    Let us know and we'll be happy to talk to you!</p>
+                    <adress>
+                        55 Main Street <br/>
+                        Some Town, Ca <br/>
+                        12345<br/>
+                        P: 555.RUN.BUDZ (555.786.2839) <br/>
+                        E:<a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </adress>
+                </div>
             </div>
         </section>
         <footer>
